--- a/style.css
+++ b/style.css
@@ -5,9 +5,24 @@
   box-sizing: border-box;
 }
 
+
+/* Títulos de productos */
+.card h4 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
+/* Precio */
+.card .precio {
+  font-family: 'Bebas Neue', cursive;
+  font-size: 1.4rem;
+  color: #111;
+}
+
+
 body {
-  font-family: Arial, sans-serif;
-  background: #ffffff;
+  font-family: 'Poppins', sans-serif;
+  background: #FFF9E5;
 }
 
 /* Navbar */
@@ -16,7 +31,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  background: #01925a;
+  background: #4A9782;
   color: white;
   padding: 1rem;
   z-index: 1000;
@@ -62,7 +77,7 @@ body {
 
 /* Estilo de cada tarjeta */
 .card {
-  background-color: white;
+  background-color: FFF9E5;
   border: 1px solid #000000;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -194,6 +209,14 @@ body {
 .nav-links a:hover i {
   color: #000000;
 }
+
+.precio {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #333;
+  margin-top: 5px;
+}
+
 
 /* Responsive tablets: 2 columnas */
 @media (max-width: 1024px) {
