--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ body {
   transform: translateX(-50%);
   font-size: 1.5rem;
   font-weight: bold;
+  color: rgb(255, 255, 255);
 }
 
 .menu-toggle {
